--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "hydesearch",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Experimental Frontend Search Engine for Hyde Documentation Sites",
   "main": "HydeSearch.ts",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsc"
   },
   "repository": {
     "type": "git",
